[package]
name = "rbmini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
btleplug = { version = "0.10", features = ["serde"] }
chrono = "0.4.23"
futures = "0.3.25"
pretty_env_logger = "0.4.0"
serde = "1.0.149"
serde_json = "1.0.91"
tokio = { version = "1.22.0", features = ["full"] }
uuid = "1.2.2"
